--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.post-card {
+  @apply flex flex-col m-3  rounded-xl
+    transition duration-300 transform border border-gray-300
+    hover:scale-105
+    hover:shadow-lg
+    dark:border-gray-200/50;
+}
