--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,10 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+.bg-primary {
+  @apply bg-white dark:bg-slate-800;
+}
+
 .post-card {
   @apply flex flex-col m-3  rounded-xl
     transition duration-300 transform border border-gray-300
     hover:scale-105
     hover:shadow-lg
     dark:border-gray-200/50;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply text-slate-900 dark:text-white;
+}
+footer {
+  @apply text-gray-600 dark:text-white
+    bg-gray-100 dark:bg-slate-600/20;
+}
+a {
+  @apply text-slate-500 hover:text-slate-700 dark:text-slate-400 dark:hover:text-slate-50;
+}
+
+p {
+  @apply text-slate-500 dark:text-slate-400;
 }
